[tool.poetry]
name = "module24"
version = "0.1.0"
description = ""
authors = ["AribetAoki <slavovna88@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.2"
self = "^2020.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
